# range-moi-ca

./: README.md  index.html  package.json
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: entry.rs  main.rs  response.rs  utils.rs
src/lib/components/: Confirm.svelte  Error.svelte  Select.svelte  Success.svelte
src/lib/interfaces/: CommandResponse.ts
